<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation_drawer_general">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/navigation_drawer_home" />
            <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/ic_menu_scan"
                android:title="@string/navigation_drawer_scan" />
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_menu_news"
                android:title="@string/navigation_drawer_news" />
        </menu>
    </item>


    <item android:title="@string/navigation_drawer_user">
        <menu>
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_menu_friends"
                android:title="@string/navigation_drawer_friends" />
            <item
                android:id="@+id/nav_wishlist"
                android:icon="@drawable/ic_menu_wishlist"
                android:title="@string/navigation_drawer_wishlist" />
            <item
                android:id="@+id/nav_achievements"
                android:icon="@drawable/ic_menu_achievements"
                android:title="@string/navigation_drawer_achievements" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/navigation_drawer_logout" />
        </menu>
    </item>

</menu>
