<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginActivity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/boardverse_logo"
            android:contentDescription="@string/login_activity_boardverse_logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/login_activity_username"
            android:hint="@string/login_activity_username"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/login_activity_password"
            android:hint="@string/login_activity_password"
            tools:ignore="Autofill" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/login_activity_login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/login_activity_register"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

    </LinearLayout>

</RelativeLayout>
