<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.minGameCarouselFragment.minGameFragment.MinGameFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/image_placeholder"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/game_activity_game_icon_description"
        android:id="@+id/min_game_fragment_game_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_activity_game_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:id="@+id/min_game_fragment_game_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_activity_game_score"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_weight="1"
            android:id="@+id/min_game_fragment_game_score"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/star"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/game_activity_game_rating_star"
            android:layout_weight="0"/>

    </LinearLayout>

</LinearLayout>
