<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:showDividers="middle"
        android:divider="@drawable/vertical_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/image_placeholder"
                android:contentDescription="@string/user_activity_user_icon_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_activity_username"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/user_activity_games_owned_count"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/user_activity_games_owned"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/user_activity_games_reviewed_count"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/user_activity_games_reviewed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/user_activity_game_wishlisted_count"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/user_activity_games_wishlisted"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_activity_button_add_friend"/>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/min_game_carousel_fragment"
            android:name="esi.mobg5.g44422.boardverse.ui.minGameCarousel.MinGameCarouselFragment"
            android:id="@+id/user_activity_games_played" />

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/min_game_carousel_fragment"
            android:name="esi.mobg5.g44422.boardverse.ui.minGameCarousel.MinGameCarouselFragment"
            android:id="@+id/user_activity_games_reviewed" />

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/min_game_carousel_fragment"
            android:name="esi.mobg5.g44422.boardverse.ui.minGameCarousel.MinGameCarouselFragment"
            android:id="@+id/user_activity_games_wishlisted" />

        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/min_game_carousel_fragment"
            android:name="esi.mobg5.g44422.boardverse.ui.minGameCarousel.MinGameCarouselFragment"
            android:id="@+id/user_activity_achievements" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </LinearLayout>

</ScrollView>
